Update: Bg and Horizontal Scrolling fix

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,3 +15,8 @@
 .blog-pagination .swiper-pagination-bullet-active {
   background-color: #008060; /* your active color */
 }
+
+html,
+body {
+  overflow-x: hidden;
+}
